@@ -1,4 +1,6 @@
 Version 1.7:
+  - Add a checkbox on project to hide some project from filtering on stations
+  - Display all stations, equipments and interventions to all users
   - Change UPLOAD_ROOT to MEDIA_ROOT in Django settings (but keep it in Docker)
   - API new object: Document (from Station, Equipment, Equipment's model and intervention)
   - New services available (for Equipments): Telnet and FTP
